Fixed Z-indexes

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -859,7 +859,7 @@ h1 {
     background: var(--txtcolor);
     grid-area: l;
     justify-self: center;
-    z-index: -5;
+    z-index: -1; /* mette la linea dietro ai riquadre */
 }
 
 /* Timeline entries styling */
@@ -873,7 +873,6 @@ h1 {
     border-radius: 20px;
     padding: 0.5em;
     text-align: center;
-    z-index: 0;
     justify-self: center;
     margin: 50px; /*aggiunge altezza alla riga - da rivisitare*/
     position: relative;
@@ -888,7 +887,6 @@ h1 {
     height: 2px;
     background: var(--txtcolor);
     display: block;
-    z-index: -5;    /*rivedere tutti gli z-index*/
 }
 
 #storia dt:nth-of-type(odd)::before {
@@ -900,7 +898,6 @@ h1 {
     height: 2px;
     background: var(--txtcolor); /* Use background instead of color */
     display: block;
-    z-index: -5;
 }
 
 #storia dt:nth-of-type(1) { --row: 2; }
@@ -989,7 +986,6 @@ article[id^="article"] {
     overflow-y: auto;
     padding: 2em;
     border-radius: 12px;
-    z-index: 1000;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
